--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "apollo-server": "^2.8.1",
+    "apollo-server-express": "^2.8.1",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "factory-girl": "^5.0.4",
     "faker": "^4.1.0",
     "graphql": "^14.4.2",
